# VideoMaker

./: .gitignore  AGENTS.md  README.md  Skill-Intergration.md  VideoMaker.md  VideoMakerDesign.md  package-lock.json  package.json
services/api/: pyproject.toml  run-dev.ps1
services/api/app/: __init__.py  asset_upload_limits.py  dev_server.py  logging_config.py  main.py  settings.py
services/api/scripts/: backfill_posters.py
services/api/tests/: conftest.py  test_agent_runs_route.py  test_app_bootstrap.py  test_artifact_store.py  test_asset_upload_limits.py  test_composition_pattern_routes.py  test_composition_patterns_list.py  test_cookie_store.py  test_duration_recommendation_route.py  test_generation_migration_snapshot.py  test_generation_render_video_url.py  test_knowledge_category_routes.py  test_knowledge_routes.py  test_model_gateway_probe_route.py  test_model_gateway_settings_route.py  test_model_gateway_status_route.py  test_multi_variant_generation.py  test_p0_flow_routes.py  test_pipeline_runner_paths.py  test_poster_service.py  test_project_media_file_routes.py  test_revise_generation.py  test_revise_plan_routes.py  test_sample_analysis_route.py  test_sample_analysis_service.py  test_sample_keyframes_route.py  test_sample_seed_service.py  test_sample_selection_routes.py  test_script_draft_nl_revise_routes.py  test_script_draft_routes.py  test_stock_media_settings_route.py  test_task_events.py  test_task_routes.py
services/worker/: pyproject.toml  run_p0_task.py
services/worker/app/: __init__.py
services/worker/scripts/: rerender_generation_visuals.py  rerun_asset_reuse.py  rerun_tts_subtitle_render.py  smoke_composition_live.py
services/worker/tests/: test_agent_runner.py  test_analysis_route.py  test_aspect_ratio.py  test_asset_agent_output_coercion.py  test_asset_reuse_provider.py  test_asset_understanding.py  test_asset_understanding_route.py  test_audio_mixer_specs.py  test_audio_profile_tool.py  test_checkpoint.py  test_completion_registry.py  test_composition_builder_import.py  test_composition_pattern_author.py  test_dashscope_tts.py  test_dashscope_video.py  test_direct_asset_understanding.py  test_direct_video_structure_pipeline.py  test_duration_target.py  test_failure_debug.py  test_ffmpeg_ass_filter_path.py  test_ffmpeg_backend.py  test_ffmpeg_integration.py  test_ffmpeg_tool.py  test_ffmpeg_trim.py  test_finish_brief.py  (+102 more)
(+608 files in other folders)
