[project]
name = "videomaker-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "httpx>=0.27",
  "pydantic>=2.7",
  "pytest>=8.0",
  "uvicorn[standard]>=0.30"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--basetemp=.pytest-tmp"
