[project]
name = "videomaker-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "httpx>=0.27",
  "pydantic>=2.7",
  "pytest>=8.0",
  "python-multipart>=0.0.9",
  "uvicorn[standard]>=0.30",
  "jsonschema>=4.23",
  "referencing>=0.35"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--basetemp=.pytest-tmp"
