[project]
name = "videomaker-worker"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "jsonschema>=4.23",
  "referencing>=0.35",
  "faster-whisper>=1.1.0",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
langfuse = ["langfuse>=2.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
  "integration: live network tests (set RUN_INTEGRATION=1)",
]
