[project]
name = "videomaker-worker"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "websockets>=12.0",
  "jsonschema>=4.23",
  "referencing>=0.35",
  "faster-whisper>=1.1.0",
  "pyyaml>=6.0",
  "cryptography>=42.0",
  "librosa>=0.10",
  "numpy>=1.26",
  "soundfile>=0.12",
]

[project.optional-dependencies]
langfuse = ["langfuse>=2.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "../shared", "../composition"]
markers = [
  "integration: live network tests (set RUN_INTEGRATION=1)",
]
